# tac

./: CONTRIBUTORS.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  main.yml  release.yml
src/: lib.rs  main.rs
src/tac-k-lib/: Cargo.toml
src/tac-k-lib/src/: lib.rs
