[workspace]
members = [".", "src/tac-k-lib"]

[workspace.package]
edition = "2021"
version = "0.3.2"
authors = ["Michael Yang <admin@my4ng.dev>"]
description = "Print lines from file in reverse order"
homepage = "https://github.com/my4ng/tack"
repository = "https://github.com/my4ng/tack"
readme = "README.md"
keywords = ["tac", "reverse", "core", "utils", "simd"]
categories = ["command-line-utilities"]
rust-version = "1.70"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
memmap2 = "0.9"

[workspace.dependencies.tac-k-lib]
path = "src/tac-k-lib"
version = "0.3.2"

[workspace.dependencies.clap]
version = "~4.4"
default-features = false
features = ["std", "help", "usage", "cargo", "error-context"]

[package]
name = "tac-k"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tac-k-lib.workspace = true
anyhow.workspace = true
clap.workspace = true

[[bin]]
name = "tac"
path = "src/main.rs"

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
